fix(quantity): icon alignment, btn width & input 4 digits

--- a/packages/stencil/components/input/src/components/osds-input/styles/osds-input.size.scss
+++ b/packages/stencil/components/input/src/components/osds-input/styles/osds-input.size.scss
@@ -9,7 +9,7 @@
       height: ods-get-size-property($sizes, height);
       border-width: ods-get-size-property($sizes, border-width);
       border-radius: ods-get-size-property($sizes, border-radius);
-      padding: ods-get-size-property($sizes, padding);
+      padding: var(--ods-input-padding, ods-get-size-property($sizes, padding));
 
       osds-icon {
         width: ods-get-size-property($sizes, icon-width);
