--- a/packages/stencil/components/quantity/src/components/osds-quantity/osds-quantity.scss
+++ b/packages/stencil/components/quantity/src/components/osds-quantity/osds-quantity.scss
@@ -1,4 +1,5 @@
 @import 'styles/osds-quantity.mixins';
+@import 'styles/osds-quantity.size';
 @import '~@ovhcloud/ods-theming/color/ods-theming-color';
 @import '~@ovhcloud/ods-theming/ods-theme';
 
@@ -8,7 +9,9 @@
   display: flex;
   flex-direction: row;
   --ods-input-text-align: center;
+  --ods-icon-vertical-align: middle;
 }
+
 :host([disabled]) {
   cursor: not-allowed;
 }
@@ -24,4 +27,5 @@ slot {
 
 // apply the theme template for the component
 @include ods-theme-component() {
+  @include osds-quantity-theme-size();
 }
